Table Customer {
  id int pk
  userId int
  phone_number varchar(15)
  address varchar(55)
}

Table Favorite {
  id int pk
  customerId int [ref: > Customer.id]
  seller_customerId int [ref: > Customer.id]
}

Table Order {
  id int pk
  customerId int [ref: > Customer.id]
  payment_typeId int [ref: > Payment.id]
  created_date date
}

Table order_product {
  id int pk
  order int [ref: > Order.id]
  product int [ref: > Product.id]
}

Table Payment {
  id int pk
  merchant_name varchar(25)
  account_number varchar(25)
  customerId int [ref: > Customer.id]
  expiration_date date
  create_date date
}

Table Product {
  id int pk
  name varchar(50)
  customerId int [ref: > Customer.id]
  price float
  description varchar(255)
  quantity int
  created_date date
  categoryId int [ref: > product_category.id]
  location varchar(50)
  image_path image
}

Table product_category {
  id int pk
  name varchar(55)
}

Table product_rating {
  id int pk
  productId int [ref: > Product.id]
  customerId int [ref: > Customer.id]
  rating int
}

Table Rating {
  id int pk
  customerId int [ref: > Customer.id]
  productId int [ref: > Product.id]
  score int
}

Table Recommendation {
  id int pk
  customerId int [ref: > Customer.id]
  productId int [ref: > Product.id]
  recommender_customerId int [ref: > Customer.id]
}